--- a/Mines/Game/View/Base.lproj/Main.storyboard
+++ b/Mines/Game/View/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,7 +13,7 @@
         <!--Game Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="GameController" customModule="Сапер" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="GameController" customModule="Mines" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -27,27 +28,26 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rut-R5-E5f" customClass="GameFieldView" customModule="Сапер" customModuleProvider="target">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2yX-oJ-WPP">
                                 <rect key="frame" x="0.0" y="20" width="375" height="559"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fg0-r0-cC1" secondAttribute="bottom" id="1Vo-LF-Bf1"/>
-                            <constraint firstItem="Rut-R5-E5f" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Av7-re-RcM"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Rut-R5-E5f" secondAttribute="trailing" id="Oiy-Wn-3Um"/>
-                            <constraint firstItem="Rut-R5-E5f" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Vae-AP-stw"/>
+                            <constraint firstItem="fg0-r0-cC1" firstAttribute="top" secondItem="2yX-oJ-WPP" secondAttribute="bottom" id="7BN-mF-J8E"/>
+                            <constraint firstItem="2yX-oJ-WPP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="DtG-2z-oxC"/>
+                            <constraint firstItem="2yX-oJ-WPP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="JzS-1j-54D"/>
                             <constraint firstItem="fg0-r0-cC1" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="lEr-HG-RaX"/>
                             <constraint firstItem="fg0-r0-cC1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="p5e-kP-kZS"/>
-                            <constraint firstItem="fg0-r0-cC1" firstAttribute="top" secondItem="Rut-R5-E5f" secondAttribute="bottom" id="xEF-Mf-o5A"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2yX-oJ-WPP" secondAttribute="trailing" id="q4S-bN-zH9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="gameFieldView" destination="Rut-R5-E5f" id="qX8-Tp-4l9"/>
+                        <outlet property="scrollView" destination="2yX-oJ-WPP" id="3Cz-HN-HNZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
